Fixed spacing issues

--- a/src/sass/components/_components.card.scss
+++ b/src/sass/components/_components.card.scss
@@ -1,6 +1,6 @@
 .card-wrapper {
   padding: 0 $inuit-global-spacing-unit-small;
-  margin: $inuit-global-spacing-unit 0;
+  margin-bottom: $inuit-global-spacing-unit;
 }
 
 .card {
@@ -9,4 +9,8 @@
   background: white;
   padding: $inuit-global-spacing-unit;
   box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.09);
+}
+
+.introductiontext {
+  padding: 0 $inuit-global-spacing-unit-small;
 }
