--- a/src/sass/components/_components.wrapper.scss
+++ b/src/sass/components/_components.wrapper.scss
@@ -3,4 +3,5 @@
   flex-direction: column;
   //align-items: center;
   background: url('../img/bcg.png');
+  padding-bottom: $inuit-global-spacing-unit;
 }
